@@ -1,3 +1,13 @@
+2005-02-01  Jakub Steiner <jimmac@ximian.com>
+
+	* scalable/emblems/emblem-favorite.icon.in
+	* scalable/emblems/emblem-favorite.svg: start phasing in
+	  pixel-perfect(TM) SVG icons again.
+
+	* 48x48/emblems/emblem-favorite.icon.in
+	* 48x48/emblems/emblem-favorite.png: remove
+
+
 2005-01-31  Jakub Steiner <jimmac@ximian.com>
 
 	* 24x24/filesystems/gnome-fs-home.png: 24x24 version, completes
